gcc/testsuite/rust/rustc/ui/parser/removed-syntax-mut-vec-ty.rs
type v = [mut isize]; // { dg-error "" "" { target *-*-* } }

